--- a/extended-utxo-spec/extended-utxo-specification.tex
+++ b/extended-utxo-spec/extended-utxo-specification.tex
@@ -934,12 +934,20 @@ EUTXO-2: see Figure~\ref{fig:eutxo-2-validity}.
 \label{fig:eutxo-2-validity}
 \end{ruledfigure}
 
-\paragraph{Note.} In rule~\ref{rule:value-is-preserved-2},
-$+$ and $\sum$ are the sum of finitely-supported functions as defined in
-Section~\ref{sec:fsfs}. Essentially we require that the
-quantities of each of the individual custom currencies involved in the
-transaction are preserved. Recall that values in $\forge$ can
-be negative whereas values in outputs must be non-negative.  Thus
+\subsection{Remarks}
+\paragraph{Preservation of value over \qtymap{}s.}
+In rule~\ref{rule:value-is-preserved-2},
+$+$ and $\sum$ operate over \qtymap{}s, which are
+finitely-supported functions (which, with their operations,
+are defined in Section~\ref{sec:fsfs}). Preservation of value
+in this model essentially requires that the
+quantities of each of the individual currencies involved in the
+transaction are preserved.
+
+\paragraph{Preservation of value and forging.}
+Recall that values in $\forge$ can
+be negative whereas values in outputs must be non-negative. This allows
+currency to be destroyed as well as created. The
 rule~\ref{rule:value-is-preserved-2} implies that a
 transaction is invalid if it attempts to destroy more of a currency
 than is actually available in its inputs.
