Add an small intro to fsfs

--- a/extended-utxo-spec/extended-utxo-specification.tex
+++ b/extended-utxo-spec/extended-utxo-specification.tex
@@ -296,8 +296,12 @@ conventions used in the remainder of the document.
   The type $\Interval{A}$ forms a lattice.
 \end{itemize}
 
-\subsection {Finitely supported functions}
+\subsection {Finitely-supported functions}
 \label{sec:fsfs}
+
+Finitely-supported functions are a generalization of maps to monoidal values.
+They always return an answer (which will in all but finitely many cases be
+zero), and can be queried for the set of non-zero points in their domain.
 
 For two types $K$ and $V$ where $V$ is a monoid, $\FinSup{K}{V}$ denotes the type of
 \textit{finitely-supported functions} from $K$ to $V$. That is, there is a
