--- a/plutus-contract/doc/contract-api.adoc
+++ b/plutus-contract/doc/contract-api.adoc
@@ -31,10 +31,10 @@ The simplest contract is the one that produces no transactions, and does not int
 
 [source,haskell]
 ----
-c1 :: Contract Empty () -- <1>
+c1 :: Contract Empty e () -- <1>
 c1 = return () -- <2>
 ----
-<1> The type of `c1` is a Plutus contract that produces a unit value when it's finished. The fact that `s` is `Empty` tells us that `c1` does not have any effects.
+<1> The type of `c1` is a Plutus contract that produces a unit value when it's finished. The fact that `s` is `Empty` tells us that `c1` does not have any effects. The fact that `e` is unconstrained tells us that it does not throw any kind of error.
 <2> The implementation of `c1` returns the unit immediately.
 
 == Common effects
@@ -47,7 +47,7 @@ For example, `awaitSlot {2c} (HasAwaitSlot s) => Slot -> Contract s Slot` is a f
 
 [source,haskell]
 ----
-c2 :: (HasAwaitSlot s) => Contract s Slot
+c2 :: (HasAwaitSlot s) => Contract s e Slot
 c2 = awaitSlot 2765 -- <1>
 ----
 <1> `c2` waits until slot 2765 and then returns the current slot. The value returns may be greater than 2765, for example if execution of the contract was suspended for a while.
@@ -62,11 +62,11 @@ Sometimes we want to see what outputs accumulate at an address, and spend all of
 
 === Unspent outputs
 
-The `UtxoAt` effect, available through `utxoAt {2c} HasUtxoAt s => Address -> Contract s AddressMap`,  lets us query the node client for all unspent outputs at an address. The difference between `utxoAt` and `nextTransactionAt` is that the former returns right away with the current UTXO set at the address, and the latter only returns when the set of unspent outputs at the address has been changed (so it may not return at all, if there are no transactions that touch the address).
+The `UtxoAt` effect, available through `utxoAt {2c} HasUtxoAt s => Address -> Contract s e AddressMap`,  lets us query the node client for all unspent outputs at an address. The difference between `utxoAt` and `nextTransactionAt` is that the former returns right away with the current UTXO set at the address, and the latter only returns when the set of unspent outputs at the address has been changed (so it may not return at all, if there are no transactions that touch the address).
 
 === Transactions
 
-Contracts write transactions using `writeTx {2c} (HasWriteTx s) => UnbalancedTx -> Contract s WriteTxResponse`. The transactions produced that way are unbalanced and unsigned. When executing a `writeTx` instruction, the app platform forwards the transaction to the user's wallet to balance it (by adding appropriate public key inputs or outputs) and compute the gas cost of any scripts involved. The finished transaction is then signed by the signing process, and submitted to the wallet which sends it to the blockchain. `writeTx` returns the final transaction's ID once it has been submitted to the blockchain (or an error if the balancing or signing failed).
+Contracts write transactions using `writeTx {2c} (HasWriteTx s) => UnbalancedTx -> Contract s e WriteTxResponse`. The transactions produced that way are unbalanced and unsigned. When executing a `writeTx` instruction, the app platform forwards the transaction to the user's wallet to balance it (by adding appropriate public key inputs or outputs) and compute the gas cost of any scripts involved. The finished transaction is then signed by the signing process, and submitted to the wallet which sends it to the blockchain. `writeTx` returns the final transaction's ID once it has been submitted to the blockchain (or an error if the balancing or signing failed).
 
 === Endpoints
 
@@ -78,7 +78,7 @@ Let's say we write a contract that expects the user to enter an `Int` using an e
 
 [source,haskell]
 ----
-c3 :: (HasEndpoint "amount" Int s) => Contract s Int -- <1>
+c3 :: (HasEndpoint "amount" Int s) => Contract s e Int -- <1>
 c3 = endpoint @"amount" -- <2>
 ----
 <1> The `HasEndpoint` constraint describes user-defined endpoints. In this case, the contract exposes an endpoint called "amount" that requires the user to enter an 'Int'.
@@ -88,7 +88,7 @@ c3 = endpoint @"amount" -- <2>
 
 Given two contracts we can combine them by running them in parallel, in sequence, or by selecting the one that finishes first.
 
-Let's say we have two contracts `collect {2c} Contract r AddressMap` and `recipient {2c} Contract r PubKey'`. `collect` watches the blockchain for payments to a script address, and after a while returns an address map with all the inputs that are currently there. `recipient` asks the user for an address to make the payment to. Now we would like to build a contract that combines `collect` and `recipient` and then submits a transaction that spends all inputs and pays the value to the given address.
+Let's say we have two contracts `collect {2c} Contract r e AddressMap` and `recipient {2c} Contract r e PubKey'`. `collect` watches the blockchain for payments to a script address, and after a while returns an address map with all the inputs that are currently there. `recipient` asks the user for an address to make the payment to. Now we would like to build a contract that combines `collect` and `recipient` and then submits a transaction that spends all inputs and pays the value to the given address.
 
 === Parallel
 
@@ -96,13 +96,13 @@ Let's say we have two contracts `collect {2c} Contract r AddressMap` and `recipi
 
 [source,haskell]
 ----
-collect :: HasBlockchainActions s => Contract s AddressMap
+collect :: HasBlockchainActions s => Contract s e AddressMap
 collect = undefined
 
-recipient :: HasBlockchainActions s => Contract s PubKey
+recipient :: HasBlockchainActions s => Contract s e PubKey
 recipient = undefined
 
-collectRec :: HasBlockchainActions s => Contract s (AddressMap, PubKey) -- <1>
+collectRec :: HasBlockchainActions s => Contract s e (AddressMap, PubKey) -- <1>
 collectRec = both collect recipient -- <2>
 ----
 <1> `collectRec` is a contract that may use an endpoint asking for a public key. It returns two things: A list of transaction inputs and a public key.
@@ -119,7 +119,7 @@ After having obtained the inputs and the public key we can proceed to produce th
 mkTx :: AddressMap -> PubKey -> UnbalancedTx
 mkTx = undefined
 
-spend :: HasBlockchainActions s => Contract s ()
+spend :: HasBlockchainActions s => Contract s e ()
 spend = do -- <1>
     (ins, pk) <- collectRec
     void (writeTx (mkTx ins pk))
@@ -140,17 +140,17 @@ data Buy = Buy { buySymbol :: String, buyAmount :: Int }
 data Sell = Sell { sellSymbol :: String, sellAmount :: Int }
 ----
 
-Then we define two contracts, `buy {2c} Contract r Buy` and `sell {2c} Contract r Sell`. Now the combined contract is
+Then we define two contracts, `buy {2c} Contract r e Buy` and `sell {2c} Contract r e Sell`. Now the combined contract is
 
 [source, haskell]
 ----
-buy :: HasBlockchainActions s => Contract s Buy
+buy :: HasBlockchainActions s => Contract s e Buy
 buy = undefined
 
-sell :: HasBlockchainActions s => Contract s Sell
+sell :: HasBlockchainActions s => Contract s e Sell
 sell = undefined
 
-buyOrSell :: HasBlockchainActions r => Contract r (Either Buy Sell)
+buyOrSell :: HasBlockchainActions r => Contract r e (Either Buy Sell)
 buyOrSell = selectEither buy sell
 ----
 
@@ -160,7 +160,7 @@ NOTE: The `Alternative` instance of `Contract` is used to select one of two bran
 
 == Compiling Contracts
 
-Once we've written our conract we can compile it into a form that can be run by the application platform. To this end the `Language.Plutus.Contract.App` module exposes a `run` function, which takes a `Contract s ()` and turns it into an `IO ()` action. The contracts we've seen so far have been parameterised over the schema (that is, they were of the form `contract {2c} c s => Contract s ()` for some set of constraints `s`). When we call `run contract` we need to commit to a specific value for the schema `s`, because it can't be inferred by the compiler. As the schema describes all possible interactions between the contract and the outside world, it usually consists of two parts: Interactions with the blockchain (via the wallet), and interactions with the user (via endpoints). The first part of the schema is always the same: The `BlockchainActions` type found in `Language.Plutus.Contract`. The second part depends on the specific set of user-facing endpoints that the contract has. We use the `Endpoint` type constructor to describe the name and type of each endpoint. The `.\/` operator combines two schemas. So a contract with a single endpoint called "amount" of type `Int` would have the following schema type:
+Once we've written our conract we can compile it into a form that can be run by the application platform. To this end the `Language.Plutus.Contract.App` module exposes a `run` function, which takes a `Contract s e ()` and turns it into an `IO ()` action. The contracts we've seen so far have been parameterised over the schema (that is, they were of the form `contract {2c} c s => Contract s e ()` for some set of constraints `s`). When we call `run contract` we need to commit to a specific value for the schema `s`, because it can't be inferred by the compiler. As the schema describes all possible interactions between the contract and the outside world, it usually consists of two parts: Interactions with the blockchain (via the wallet), and interactions with the user (via endpoints). The first part of the schema is always the same: The `BlockchainActions` type found in `Language.Plutus.Contract`. The second part depends on the specific set of user-facing endpoints that the contract has. We use the `Endpoint` type constructor to describe the name and type of each endpoint. The `.\/` operator combines two schemas. So a contract with a single endpoint called "amount" of type `Int` would have the following schema type:
 
 [source, haskell]
 ----
@@ -179,6 +179,6 @@ To avoid keeping old events around for longer than necessary we can use the `jso
 
 `jsonCheckpoint` is a unary operator that takes a `PlutusContract` with a result that can be written to and read from JSON. The bookeeping system that is used behind the scenes to keep track of contract state will, upon encountering a contract wrapped in `jsonCheckpoint`, run the contract once and then store the result of that contract as a JSON object. The next time we restore the contract's state, the system will _not_ replay the events for that contract, but instead use the `FromJSON` instance to restore the state.
 
-NOTE: Contracts that don't use `jsonCheckpoint` are still able to have their state saved and restored. This will take the form of the `[Event]` sequence of inputs that have been seen so far. 
+NOTE: Contracts that don't use `jsonCheckpoint` are still able to have their state saved and restored. This will take the form of the `[Event]` sequence of inputs that have been seen so far.
 
 NOTE: To handle things like the loop in the `sharedealing` example we probably need something more explicit, like a notion of cells that can be written to and read from. But we could implement that in the same manner as the `jsonCheckpoint` (the important bit is how the JSON constraints are embedded in the contract definition)
